<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/reze_surface"
    android:paddingLeft="20.0dip"
    android:paddingTop="18.0dip"
    android:paddingRight="20.0dip"
    android:paddingBottom="24.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textSize="20.0sp"
        android:textStyle="bold"
        android:textColor="@color/reze_on_surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model_title"
        android:fontFamily="@font/space_grotesk" />
    <com.google.android.material.materialswitch.MaterialSwitch
        android:textSize="16.0sp"
        android:textColor="@color/reze_on_surface"
        android:id="@id/thinking_switch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14.0dip"
        android:text="@string/thinking_label" />
    <TextView
        android:textSize="12.0sp"
        android:textColor="@color/reze_on_surface_muted"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4.0dip"
        android:text="@string/thinking_hint" />
    <View
        android:background="@color/reze_outline"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginTop="12.0dip"
        android:layout_marginBottom="12.0dip"
        android:layout_marginVertical="12.0dip" />
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="14.0sp"
            android:textColor="@color/reze_on_surface"
            android:textColorHint="@color/reze_on_surface_muted"
            android:id="@id/model_search"
            android:background="@drawable/bg_input"
            android:padding="12.0dip"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="Search model"
            android:layout_weight="1.0"
            android:inputType="text" />
        <com.google.android.material.button.MaterialButton
            android:id="@id/models_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Refresh"
            android:layout_marginStart="8.0dip" />
    </LinearLayout>
    <TextView
        android:textSize="13.0sp"
        android:textColor="@color/reze_on_surface_muted"
        android:id="@id/models_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_models" />
    <ScrollView
        android:scrollbars="none"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxHeight="360.0dip">
        <LinearLayout
            android:orientation="vertical"
            android:id="@id/model_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>