<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/reze_surface"
    android:paddingTop="6.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8.0dip"
        android:paddingTop="6.0dip"
        android:paddingRight="8.0dip"
        android:paddingBottom="6.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8.0dip"
        android:paddingVertical="6.0dip">
        <ImageButton
            android:id="@id/explorer_up"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="9.0dip"
            android:layout_width="42.0dip"
            android:layout_height="42.0dip"
            android:src="@drawable/ic_arrow_back_24"
            android:scaleType="fitCenter"
            android:tint="@color/reze_on_surface"
            android:contentDescription="@string/nav_open" />
        <TextView
            android:textSize="15.0sp"
            android:textStyle="bold"
            android:textColor="@color/reze_on_surface"
            android:ellipsize="start"
            android:id="@id/explorer_path"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4.0dip"
            android:layout_marginRight="4.0dip"
            android:text="/"
            android:maxLines="1"
            android:layout_weight="1.0"
            android:layout_marginHorizontal="4.0dip" />
        <ImageButton
            android:id="@id/explorer_paste"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="9.0dip"
            android:visibility="gone"
            android:layout_width="42.0dip"
            android:layout_height="42.0dip"
            android:src="@drawable/ic_content_paste_24"
            android:scaleType="fitCenter"
            android:tint="@color/reze_crimson"
            android:contentDescription="@string/files_explorer" />
        <ImageButton
            android:id="@id/explorer_new_folder"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="9.0dip"
            android:layout_width="42.0dip"
            android:layout_height="42.0dip"
            android:src="@drawable/ic_create_new_folder_24"
            android:scaleType="fitCenter"
            android:tint="@color/reze_on_surface"
            android:contentDescription="@string/files_explorer" />
        <ImageButton
            android:id="@id/explorer_close"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="10.0dip"
            android:layout_width="42.0dip"
            android:layout_height="42.0dip"
            android:src="@drawable/ic_close_24"
            android:scaleType="fitCenter"
            android:tint="@color/reze_on_surface_muted"
            android:contentDescription="@string/nav_close" />
    </LinearLayout>
    <View
        android:background="@color/reze_outline"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@id/explorer_list"
        android:paddingBottom="8.0dip"
        android:scrollbars="none"
        android:clipToPadding="false"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />
</LinearLayout>