<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@id/chat_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:id="@id/chat_ad_slot"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginTop="16.0dip"
        android:layout_marginRight="12.0dip"
        android:layout_marginBottom="8.0dip"
        android:layout_marginHorizontal="12.0dip" />
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@id/chat_list"
            android:paddingTop="8.0dip"
            android:paddingBottom="8.0dip"
            android:scrollbars="none"
            android:clipToPadding="false"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@id/empty_state"
            android:paddingLeft="40.0dip"
            android:paddingRight="40.0dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingHorizontal="40.0dip">
            <TextView
                android:textSize="38.0sp"
                android:textStyle="bold"
                android:textColor="@color/reze_crimson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_title"
                android:fontFamily="@font/space_grotesk" />
            <TextView
                android:textSize="15.0sp"
                android:textColor="@color/reze_on_surface_muted"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/empty_subtitle" />
            <FrameLayout
                android:id="@id/home_ad_slot"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28.0dip" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/reze_bg"
        android:paddingTop="6.0dip"
        android:paddingBottom="12.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@id/generating_bar"
            android:paddingLeft="22.0dip"
            android:paddingRight="22.0dip"
            android:paddingBottom="8.0dip"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="22.0dip">
            <ProgressBar
                android:id="@id/generating_spinner"
                android:layout_width="18.0dip"
                android:layout_height="18.0dip"
                android:indeterminateTint="@color/reze_crimson"
                style="?android:progressBarStyleSmall" />
            <TextView
                android:textSize="14.0sp"
                android:textStyle="bold"
                android:textColor="@color/reze_crimson"
                android:id="@id/generating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thinking…"
                android:layout_marginStart="12.0dip" />
        </LinearLayout>
        <HorizontalScrollView
            android:id="@id/attachment_scroll"
            android:paddingLeft="14.0dip"
            android:paddingRight="14.0dip"
            android:visibility="gone"
            android:scrollbars="none"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4.0dip"
            android:paddingHorizontal="14.0dip">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@id/attachment_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </HorizontalScrollView>
        <LinearLayout
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="12.0dip"
            android:paddingRight="12.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12.0dip">
            <ImageButton
                android:id="@id/attach_button"
                android:background="@drawable/bg_attach_circle"
                android:padding="10.0dip"
                android:layout_width="44.0dip"
                android:layout_height="44.0dip"
                android:layout_marginBottom="4.0dip"
                android:src="@drawable/ic_add_24"
                android:scaleType="fitCenter"
                android:contentDescription="@string/attach"
                android:layout_marginEnd="6.0dip" />
            <EditText
                android:textSize="16.0sp"
                android:textColor="@color/reze_on_surface"
                android:textColorHint="@color/reze_on_surface_muted"
                android:id="@id/input"
                android:background="@drawable/bg_input"
                android:paddingLeft="20.0dip"
                android:paddingTop="14.0dip"
                android:paddingRight="20.0dip"
                android:paddingBottom="14.0dip"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:minHeight="52.0dip"
                android:hint="@string/message_hint"
                android:maxLines="5"
                android:layout_weight="1.0"
                android:inputType="textCapSentences|textMultiLine"
                android:layout_marginEnd="8.0dip"
                android:paddingHorizontal="20.0dip"
                android:paddingVertical="14.0dip" />
            <ImageButton
                android:id="@id/send_button"
                android:background="@drawable/bg_send_button"
                android:layout_width="52.0dip"
                android:layout_height="52.0dip"
                android:src="@drawable/ic_send_24"
                android:scaleType="centerInside"
                android:contentDescription="@string/send" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>